Add dark mode support and theme switching
Introduces a comprehensive dark mode theme with CSS variable overrides and Tailwind class adjustments. Adds a new theme.js script to manage theme selection (light, dark, auto) and persist user preference. Updates settings page to use new theme selection logic and ensures all relevant pages and components load the theme manager. Refactors device card and sidebar for better dark mode compatibility and visual consistency.

--- a/frontend/pages/groups.html
+++ b/frontend/pages/groups.html
@@ -64,7 +64,7 @@
             </div>
 
             <!-- Add Group Button -->
-            <div class="absolute bottom-0 left-0 right-0 p-3 lg:p-4 bg-gradient-to-t from-slate-50 via-slate-50 to-transparent">
+            <div class="add-group-container absolute bottom-0 left-0 right-0 p-3 lg:p-4">
                 <button class="w-full flex items-center justify-center gap-2 lg:gap-3 bg-primary text-white px-4 lg:px-6 py-3 lg:py-4 rounded-xl lg:rounded-2xl font-bold shadow-xl shadow-primary/20 hover:scale-[1.02] active:scale-[0.98] transition-all text-sm lg:text-base" id="add-group-btn">
                     <span class="material-symbols-outlined">add_circle</span>
                     Add Group
@@ -121,7 +121,7 @@
             </div>
 
             <!-- Send Files Button -->
-            <div class="p-4 lg:p-8 bg-gradient-to-t from-white via-white/90 to-transparent border-t border-slate-50 absolute bottom-0 left-0 right-0 z-20">
+            <div class="send-files-container p-4 lg:p-8 border-t absolute bottom-0 left-0 right-0 z-20">
                 <button class="w-full flex items-center justify-center gap-3 lg:gap-4 bg-primary text-white py-4 lg:py-5 rounded-xl lg:rounded-2xl font-bold shadow-lg shadow-primary/25 hover:brightness-105 active:scale-[0.99] transition-all" id="send-files-btn">
                     <span class="material-symbols-outlined text-xl lg:text-2xl">send</span>
                     <span class="text-base lg:text-lg">Send Files to Group</span>
@@ -131,6 +131,7 @@
     </main>
 
     <!-- Scripts -->
+    <script src="../assets/js/theme.js"></script>
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/groups.js"></script>
     
