--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,6 +166,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="assets/js/theme.js"></script>
     <script src="assets/js/components.js"></script>
     <script src="assets/js/app.js"></script>
     
