--- a/frontend/pages/edit-group.html
+++ b/frontend/pages/edit-group.html
@@ -78,7 +78,7 @@
             </div>
 
             <!-- Bottom Actions -->
-            <div class="absolute bottom-0 left-0 right-0 p-4 lg:p-8 bg-gradient-to-t from-white via-white to-transparent">
+            <div class="edit-group-actions absolute bottom-0 left-0 right-0 p-4 lg:p-8">
                 <button class="w-full bg-primary text-white font-bold py-4 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.99] transition-all text-base" id="save-btn">
                     Save Changes
                 </button>
@@ -129,6 +129,7 @@
     </main>
 
     <!-- Scripts -->
+    <script src="../assets/js/theme.js"></script>
     <script src="../assets/js/app.js"></script>
     <script>
         // Available devices for selection
