Add Ed25519 authentication module and integrate with UI
Introduces a new frontend/assets/js/auth.js module for Ed25519 public/private key authentication, handling device registration, login, and key management. Integrates the authentication script into index.html, edit-group.html, groups.html, and settings.html. Updates settings.html to allow device registration and device name management, including UI feedback and localStorage integration.

--- a/frontend/pages/edit-group.html
+++ b/frontend/pages/edit-group.html
@@ -130,6 +130,7 @@
 
     <!-- Scripts -->
     <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/auth.js"></script>
     <script src="../assets/js/app.js"></script>
     <script>
         // Available devices for selection
