--- a/frontend/pages/groups.html
+++ b/frontend/pages/groups.html
@@ -132,6 +132,7 @@
 
     <!-- Scripts -->
     <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/auth.js"></script>
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/groups.js"></script>
     
