--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,7 +167,7 @@
 
     <!-- Scripts -->
     <script src="assets/js/theme.js"></script>
-    <script src="assets/js/auth.js"></script>
+    <script type="module" src="assets/js/auth.js"></script>
     <script src="assets/js/components.js"></script>
     <script src="assets/js/app.js"></script>
     
