--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,9 @@
             <div class="flex gap-4">
                 <div class="bg-white px-4 md:px-5 py-2 md:py-2.5 rounded-full border border-slate-200 flex items-center gap-2 md:gap-3 shadow-sm text-slate-700">
                     <span class="material-symbols-outlined text-primary text-lg md:text-xl">wifi</span>
-                    <span class="text-xs md:text-sm font-semibold">12.5 MB/s</span>
+                    <span data-network-speed class="text-xs md:text-sm font-semibold">
+                        0.0 MB/s
+                    </span>
                 </div>
             </div>
         </header>
@@ -68,7 +70,9 @@
                 </div>
                 <div class="bg-white px-3 py-1.5 rounded-full border border-slate-200 flex items-center gap-2 shadow-sm">
                     <span class="material-symbols-outlined text-primary text-base">wifi</span>
-                    <span class="text-xs font-semibold text-slate-700">12.5 MB/s</span>
+                    <span data-network-speed class="text-xs font-semibold text-slate-700">
+                        0.0 MB/s
+                    </span>
                 </div>
             </div>
         </div>
@@ -169,7 +173,7 @@
     <script src="assets/js/theme.js"></script>
     <script type="module" src="assets/js/auth.js"></script>
     <script src="assets/js/components.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script type="module" src="assets/js/app.js"></script>
     
     <!-- Mobile Menu Script -->
     <script>
