--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,6 +169,9 @@
         </div>
     </div>
 
+    <!-- Toast Container -->
+    <div id="toast-container" class="fixed bottom-5 right-5 z-[100] flex flex-col gap-3 pointer-events-none"></div>
+
     <!-- Scripts -->
     <script src="assets/js/theme.js"></script>
     <script type="module" src="assets/js/auth.js"></script>
