--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -69,29 +69,35 @@
                     </div>
 
                     <div class="space-y-4 lg:space-y-6">
-                        <!-- Device Name Input -->
-                        <div class="floating-label-group">
-                            <input
-                                class="w-full px-5 py-4 lg:py-5 text-base bg-transparent border-2 border-slate-200 rounded-xl focus:ring-0 focus:border-primary outline-none transition-colors peer"
-                                id="device_name" placeholder=" " type="text" />
-                            <label for="device_name">Device Display Name</label>
+                        <div>
+                            <label for="device_name" class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-2 pl-1">
+                                Device Display Name
+                            </label>
+                            <div class="flex gap-2">
+                                <input
+                                        class="flex-1 px-5 py-3 lg:py-4 text-base bg-slate-50 border-2 border-slate-200 rounded-xl focus:ring-0 focus:border-primary outline-none transition-all placeholder-slate-300 font-medium text-slate-700"
+                                        id="device_name" placeholder="Enter device name..." type="text" />
+
+                                <button onclick="saveConfiguration()" id="save-device-btn" disabled
+                                        class="bg-primary text-white font-bold px-6 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-95 transition-all flex items-center gap-2 disabled:bg-slate-200 disabled:text-slate-400 disabled:cursor-not-allowed disabled:shadow-none">
+                                    <span class="hidden sm:inline">Save</span>
+                                    <span class="material-symbols-outlined text-xl">save</span>
+                                </button>
+                            </div>
+                            <p class="text-xs text-slate-400 mt-2 pl-1">This name will be visible to other users.</p>
                         </div>
 
-                        <!-- Discoverable Toggle -->
-                        <div
-                            class="flex items-center justify-between p-4 lg:p-5 bg-slate-50 rounded-xl border border-transparent hover:border-slate-200 transition-all">
+                        <div class="flex items-center justify-between p-4 lg:p-5 bg-slate-50 rounded-xl border border-transparent hover:border-slate-200 transition-all">
                             <div class="flex items-center gap-3 lg:gap-4">
                                 <div class="w-10 h-10 flex items-center justify-center bg-white rounded-lg shadow-sm">
                                     <span class="material-symbols-outlined text-slate-400">visibility</span>
                                 </div>
                                 <div>
                                     <span class="font-bold text-sm lg:text-base text-slate-900">Discoverable</span>
-                                    <p class="text-xs lg:text-sm text-slate-500">Visible to others on your local network
-                                    </p>
+                                    <p class="text-xs lg:text-sm text-slate-500">Visible to others on your local network</p>
                                 </div>
                             </div>
-                            <div id="discoverable-toggle" class="toggle-switch active"
-                                onclick="toggleDiscoverable(this)"></div>
+                            <div id="discoverable-toggle" class="toggle-switch active" onclick="toggleDiscoverable(this)"></div>
                         </div>
                     </div>
                 </section>
@@ -121,127 +127,20 @@
                         </button>
                     </div>
                 </section>
-
-                <!-- Save Button -->
-                <div class="pt-6 lg:pt-8 pb-8 lg:pb-12 flex justify-center">
-                    <button onclick="saveConfiguration()"
-                        class="w-full sm:w-auto min-w-[280px] bg-primary text-white font-bold py-4 lg:py-5 px-8 rounded-full shadow-xl shadow-primary/30 hover:brightness-105 hover:-translate-y-0.5 active:scale-[0.98] transition-all flex items-center justify-center gap-3">
-                        <span class="text-sm lg:text-base uppercase tracking-widest">Save Configuration</span>
-                        <span class="material-symbols-outlined text-xl lg:text-2xl">done_all</span>
-                    </button>
-                </div>
             </div>
         </div>
     </main>
 
-    <!-- Scripts -->
+    <!-- Toast Container -->
+    <div id="toast-container" class="fixed top-10 left-1/2 -translate-x-1/2 z-[9999] flex flex-col gap-3 pointer-events-none items-center"></div>
+
     <script src="../assets/js/theme.js"></script>
-    <script src="../assets/js/auth.js"></script>
-    <script src="../assets/js/app.js"></script>
-
-    <!-- Settings Page Script -->
-    <script>
-        // Mobile menu functions
-        function openMobileMenu() {
-            const sidebar = document.querySelector('[data-mobile-menu]');
-            const overlay = document.getElementById('sidebar-overlay');
-            sidebar.classList.remove('-translate-x-full');
-            overlay.classList.remove('hidden');
-            document.body.style.overflow = 'hidden';
-        }
-
-        function closeMobileMenu() {
-            const sidebar = document.querySelector('[data-mobile-menu]');
-            const overlay = document.getElementById('sidebar-overlay');
-            sidebar.classList.add('-translate-x-full');
-            overlay.classList.add('hidden');
-            document.body.style.overflow = '';
-        }
-
-        document.getElementById('mobile-menu-btn')?.addEventListener('click', openMobileMenu);
-
-        // Toggle Discoverable Wrapper
-        function toggleDiscoverable(el) {
-            el.classList.toggle('active');
-            const isActive = el.classList.contains('active');
-
-            // Check if global function exists (from app.js)
-            if (typeof window.setDiscoverable === 'function') {
-                window.setDiscoverable(isActive);
-            } else {
-                console.warn('WebSocket connection not ready or setDiscoverable missing');
-            }
-        }
-
-        // Load saved device name on page load
-        document.addEventListener('DOMContentLoaded', () => {
-            const deviceNameInput = document.getElementById('device_name');
-            if (deviceNameInput && window.GopherDropAuth) {
-                const savedName = GopherDropAuth.getDeviceName();
-                if (savedName) {
-                    deviceNameInput.value = savedName;
-                }
-            }
-        });
-
-        // Save Configuration - integrate with Auth
-        async function saveConfiguration() {
-            const deviceNameInput = document.getElementById('device_name');
-            const deviceName = deviceNameInput?.value.trim();
-
-            if (!deviceName) {
-                alert('Please enter a device name.');
-                deviceNameInput?.focus();
-                return;
-            }
-
-            // Show loading state
-            const saveBtn = document.querySelector('button[onclick="saveConfiguration()"]');
-            const originalText = saveBtn?.innerHTML;
-            if (saveBtn) {
-                saveBtn.innerHTML = '<span class="material-symbols-outlined animate-spin">progress_activity</span> Saving...';
-                saveBtn.disabled = true;
-            }
-
-            try {
-                // 1. Save locally
-                localStorage.setItem('gdrop_device_id', deviceName);
-
-                // 2. Save to backend if token exists
-                const token = localStorage.getItem('gdrop_token');
-
-                // If we don't have a token yet, wait/retry or just save locally. 
-                // But usually auth should be ready.
-
-                if (token) {
-                    const response = await fetch('http://localhost:8080/api/v1/protected/user', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json',
-                            'Authorization': 'Bearer ' + token
-                        },
-                        body: JSON.stringify({ username: deviceName })
-                    });
-
-                    if (!response.ok) {
-                        const errData = await response.json();
-                        throw new Error(errData.message || 'Failed to sync with server');
-                    }
-                }
-
-                alert('Settings saved successfully!');
-            } catch (error) {
-                console.error('[Settings] Save error:', error);
-                alert('Settings saved locally, but server update failed: ' + error.message);
-            } finally {
-                // Restore button
-                if (saveBtn) {
-                    saveBtn.innerHTML = originalText;
-                    saveBtn.disabled = false;
-                }
-            }
-        }
-    </script>
+    <script type="module" src="../assets/js/auth.js"></script>
+    <script src="../assets/js/components.js" defer></script>
+    <script src="../assets/js/mobile-nav.js" defer></script>
+    <script type="module" src="../assets/js/app.js"></script>
+    <script type="module" src="../assets/js/app.js"></script>
+    <script type="module" src="../assets/js/settings.js"></script>
 </body>
 
 </html>
