--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
                         0 FOUND
                     </div>
                 </div>
-                <button class="flex items-center justify-center gap-2 bg-primary text-white px-4 py-2.5 rounded-xl font-bold shadow-lg shadow-primary/20 hover:scale-[1.02] active:scale-[0.98] transition-all text-sm w-full sm:w-auto" id="create-group-btn">
+                <button class="flex items-center justify-center gap-2 bg-primary text-white px-4 py-2.5 rounded-xl font-bold shadow-lg shadow-primary/20 hover:scale-[1.02] active:scale-[0.98] transition-all text-sm w-full sm:w-auto" id="create-group-btn" onclick="openCreateGroupModal()">
                     <span class="material-symbols-outlined text-lg">group_add</span>
                     <span class="hidden sm:inline">Create Group from Selection</span>
                     <span class="sm:hidden">Create Group</span>
@@ -122,6 +122,31 @@
                 <button class="flex-1 py-3 rounded-xl border border-slate-200 text-slate-600 font-bold hover:bg-slate-100 transition-all" onclick="closeCreateGroupModal()">Cancel</button>
                 <button class="flex-1 py-3 rounded-xl bg-primary text-white font-bold shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.99] transition-all" onclick="confirmCreateGroup()">Create Group & Send</button>
             </div>
+        </div>
+    </div>
+</div>
+
+<div id="incoming-request-modal" class="fixed inset-0 z-[60] hidden">
+    <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm"></div>
+    <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-sm bg-white rounded-3xl shadow-2xl p-6 text-center transform transition-all scale-100">
+
+        <div class="w-16 h-16 bg-blue-50 text-primary rounded-2xl flex items-center justify-center mx-auto mb-4 animate-bounce">
+            <span class="material-symbols-outlined text-3xl">move_to_inbox</span>
+        </div>
+
+        <h3 class="text-xl font-bold text-slate-900 mb-1">Incoming Transfer!</h3>
+        <p class="text-sm text-slate-500 mb-6">
+            <span class="font-bold text-slate-800" id="incoming-sender">Unknown</span> wants to send you <br>
+            <span class="font-bold text-primary" id="incoming-file">files</span>
+        </p>
+
+        <div class="flex gap-3">
+            <button onclick="respondToInvitation(false)" class="flex-1 py-3 rounded-xl border-2 border-slate-100 text-slate-500 font-bold hover:bg-slate-50 hover:text-red-500 transition-colors">
+                Decline
+            </button>
+            <button onclick="respondToInvitation(true)" class="flex-1 py-3 rounded-xl bg-primary text-white font-bold shadow-lg shadow-primary/30 hover:brightness-110 active:scale-95 transition-all">
+                Accept
+            </button>
         </div>
     </div>
 </div>
