--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,6 +151,56 @@
     </div>
 </div>
 
+<div id="transfer-progress-overlay" class="fixed inset-0 z-[100] bg-slate-50 dark:bg-slate-900 hidden flex-col transition-all duration-300">
+
+    <nav class="w-full px-8 py-6 flex justify-between items-center z-20">
+        <div class="flex items-center gap-3">
+            <div class="w-10 h-10 bg-primary rounded-xl flex items-center justify-center text-white shadow-lg">
+                <span class="material-symbols-outlined">rocket_launch</span>
+            </div>
+            <span class="font-bold text-xl tracking-tight text-slate-800">Sending Files...</span>
+        </div>
+    </nav>
+
+    <main class="flex-1 w-full max-w-7xl mx-auto px-4 lg:px-8 grid grid-cols-1 lg:grid-cols-12 gap-8 py-4 pb-12 overflow-y-auto">
+
+        <section class="col-span-1 lg:col-span-12 p-4 lg:p-0">
+            <div class="flex flex-col md:flex-row justify-between items-end mb-6 gap-4">
+                <div>
+                    <h1 class="text-3xl font-light text-slate-900">Sending <span class="font-bold" id="total-items-badge">0 files</span></h1>
+                    <p class="text-slate-400 font-medium">Transferring to <span id="recipient-count">0 devices</span></p>
+                </div>
+                <div class="text-right w-full md:w-auto">
+                    <span class="text-5xl font-bold text-primary" id="overall-percentage">0%</span>
+                    <p class="text-slate-400 font-bold uppercase text-[10px] tracking-widest mt-1" id="transfer-status-text">Waiting...</p>
+                </div>
+            </div>
+            <div class="h-3 w-full bg-slate-200 rounded-full overflow-hidden">
+                <div class="h-full bg-primary transition-all duration-300" id="main-progress-bar" style="width: 0%"></div>
+            </div>
+        </section>
+
+        <section class="col-span-1 lg:col-span-4 space-y-4 pb-8">
+            <h3 class="text-xs font-bold text-slate-400 uppercase tracking-widest px-1 mb-2">Transfer Queue</h3>
+            <div id="transfer-queue" class="space-y-3">
+            </div>
+            <div class="pt-6">
+                <button onclick="endTransferSession()" class="w-full py-4 border-2 border-slate-200 text-slate-400 rounded-2xl font-bold text-sm hover:border-red-200 hover:text-red-500 hover:bg-red-50 transition-all flex items-center justify-center gap-2">
+                    <span class="material-symbols-outlined text-lg">close</span>
+                    End Session
+                </button>
+            </div>
+        </section>
+
+        <section class="col-span-1 lg:col-span-8 rounded-[2.5rem] bg-slate-100 flex items-center justify-center min-h-[400px] relative">
+            <p class="text-slate-400 font-bold text-sm uppercase tracking-widest">P2P Connection Active</p>
+            <div class="absolute inset-0 flex items-center justify-center opacity-10">
+                <span class="material-symbols-outlined text-9xl">hub</span>
+            </div>
+        </section>
+    </main>
+</div>
+
 <div id="toast-container" class="fixed top-10 left-1/2 -translate-x-1/2 z-[9999] flex flex-col gap-3 pointer-events-none items-center"></div>
 
 <script src="assets/js/theme.js"></script>
