implementasi API untuk SSID agar bisa deteksi dari mac,windows dan linux

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
         <div>
             <h2 class="text-2xl md:text-3xl font-bold text-slate-900">Local Network</h2>
             <p class="text-slate-500 font-medium text-sm md:text-base">
-                Scanning for devices on <span class="text-primary font-bold">Office_WiFi_5G</span>
+                Scanning for devices on <span id="network-ssid-desktop" class="text-primary font-bold">Loading...</span>
             </p>
         </div>
         <div class="flex gap-4">
@@ -55,7 +55,7 @@
             <div>
                 <h2 class="text-xl font-bold text-slate-900">Local Network</h2>
                 <p class="text-slate-500 text-xs">
-                    Scanning on <span class="text-primary font-bold">Office_WiFi_5G</span>
+                    Scanning on <span id="network-ssid-mobile" class="text-primary font-bold">Loading...</span>
                 </p>
             </div>
             <div class="bg-white px-3 py-1.5 rounded-full border border-slate-200 flex items-center gap-2 shadow-sm">
