--- a/frontend/pages/groups.html
+++ b/frontend/pages/groups.html
@@ -133,7 +133,7 @@
     <!-- Scripts -->
     <script src="../assets/js/theme.js"></script>
     <script src="../assets/js/auth.js"></script>
-    <script src="../assets/js/app.js"></script>
+    <script type="module" src="../assets/js/app.js"></script>
     <script src="../assets/js/groups.js"></script>
 
     <!-- Mobile Menu Script -->
