--- a/frontend/pages/groups.html
+++ b/frontend/pages/groups.html
@@ -106,14 +106,19 @@
                 </div>
                 <div class="flex gap-2 lg:gap-3">
                     <button
-                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-slate-200 text-slate-500 hover:bg-slate-50"
-                        id="edit-group-btn" onclick="navigateToEditGroup()">
+                            class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-slate-200 text-slate-500 hover:bg-slate-50"
+                            id="edit-group-btn" onclick="navigateToEditGroup()" title="Edit Group">
                         <span class="material-symbols-outlined text-lg lg:text-xl">edit</span>
                     </button>
                     <button
-                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-red-100 text-red-500 hover:bg-red-50"
-                        id="delete-group-btn" onclick="deleteSelectedGroup()">
+                            class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-red-100 text-red-500 hover:bg-red-50"
+                            id="delete-group-btn" onclick="deleteSelectedGroup()" title="Delete Group">
                         <span class="material-symbols-outlined text-lg lg:text-xl">delete</span>
+                    </button>
+                    <button
+                            class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-slate-200 text-slate-400 hover:bg-slate-50 hover:text-slate-600"
+                            onclick="hideGroupDetail()" title="Close Details">
+                        <span class="material-symbols-outlined text-lg lg:text-xl">close</span>
                     </button>
                 </div>
             </div>
@@ -154,8 +159,31 @@
         </div>
     </main>
 
+    <div id="add-device-to-group-modal" class="fixed inset-0 z-[60] hidden">
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm" onclick="closeAddDeviceToGroupModal()"></div>
+        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-sm bg-white rounded-2xl shadow-2xl overflow-hidden">
+            <div class="px-5 py-4 border-b border-slate-100 flex justify-between items-center">
+                <h3 class="font-bold text-slate-900">Add Online Device</h3>
+                <button onclick="closeAddDeviceToGroupModal()" class="text-slate-400 hover:text-slate-600">
+                    <span class="material-symbols-outlined text-lg">close</span>
+                </button>
+            </div>
+
+            <div class="p-4 max-h-64 overflow-y-auto custom-scrollbar space-y-2" id="add-device-list-container">
+            </div>
+
+            <div class="p-4 bg-slate-50 border-t border-slate-100 flex justify-end">
+                <button onclick="confirmAddDevicesToGroup()" class="bg-primary text-white font-bold px-4 py-2 rounded-xl text-sm shadow-lg shadow-primary/20 hover:brightness-105 transition-all">
+                    Add Selected
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/fileStorage.js"></script>
+    <script src="../assets/js/components.js"></script>
     <script type="module" src="../assets/js/auth.js"></script>
     <script type="module" src="../assets/js/app.js"></script>
     <script src="../assets/js/groups.js"></script>
@@ -181,5 +209,4 @@
         document.getElementById('mobile-menu-btn')?.addEventListener('click', openMobileMenu);
     </script>
 </body>
-
 </html>
