--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>GopherDrop Dashboard</title>
+    <link href="./assets/img/logo.png" rel="icon" type="image/x-icon">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
@@ -140,7 +141,8 @@
                 <label
                         class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-2">Group
                     Name</label>
-                <input class="w-full px-4 py-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-base font-medium text-slate-900" id="new-group-name"
+                <input class="w-full px-4 py-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-base font-medium text-slate-900"
+                       id="new-group-name"
                        placeholder="Enter group name..."
                        type="text"/>
             </div>
