--- a/frontend/pages/edit-group.html
+++ b/frontend/pages/edit-group.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>GopherDrop - Edit Group</title>
+    <link href="./assets/img/logo.png" rel="icon" type="image/x-icon">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+          rel="stylesheet"/>
 
     <link href="../assets/css/style.css" rel="stylesheet"/>
 
@@ -23,21 +26,23 @@
         </div>
         <h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">GopherDrop</h1>
     </div>
-    <button id="mobile-menu-btn" class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-all">
+    <button class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-all" id="mobile-menu-btn">
         <span class="material-symbols-outlined text-2xl text-slate-600 dark:text-slate-300">menu</span>
     </button>
 </header>
 
-<div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="closeMobileMenu()"></div>
+<div class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" id="sidebar-overlay" onclick="closeMobileMenu()"></div>
 
-<div id="sidebar-container" class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300" data-mobile-menu></div>
+<div class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300"
+     data-mobile-menu
+     id="sidebar-container"></div>
 
 <main class="flex-1 flex flex-col lg:flex-row overflow-auto min-h-0">
 
     <div class="w-full lg:w-1/2 lg:max-w-xl bg-white dark:bg-slate-800 flex flex-col h-full relative transition-colors duration-300">
         <div class="px-4 lg:px-8 pt-4 lg:pt-8">
             <div class="flex items-center gap-2 text-sm text-slate-500 dark:text-slate-400">
-                <a href="groups.html" class="hover:text-primary transition-colors">Groups</a>
+                <a class="hover:text-primary transition-colors" href="groups.html">Groups</a>
                 <span class="material-symbols-outlined text-sm">chevron_right</span>
                 <span class="text-slate-900 dark:text-white font-medium">Edit Group</span>
             </div>
@@ -45,7 +50,8 @@
 
         <div class="px-4 lg:px-8 py-4 lg:py-6">
             <h2 class="text-2xl lg:text-3xl font-bold text-slate-900 dark:text-white">Group Details</h2>
-            <p class="text-slate-500 dark:text-slate-400 text-sm lg:text-base mt-1">Configure the basic settings for this group.</p>
+            <p class="text-slate-500 dark:text-slate-400 text-sm lg:text-base mt-1">Configure the basic settings for
+                this group.</p>
         </div>
 
         <div class="flex-1 px-4 lg:px-8 pb-32">
@@ -55,9 +61,9 @@
                         Group Name
                     </label>
                     <input
-                            type="text"
-                            id="group-name-input"
                             class="w-full px-4 py-3 lg:py-4 bg-slate-50 dark:bg-slate-900 border border-slate-200 dark:border-slate-700 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-base lg:text-lg font-medium text-slate-900 dark:text-white placeholder-slate-400"
+                            id="group-name-input"
+                            type="text"
                             value="Engineering Team"
                     />
                 </div>
@@ -65,10 +71,12 @@
         </div>
 
         <div class="edit-group-actions absolute bottom-0 left-0 right-0 p-4 lg:p-8 bg-white dark:bg-slate-800 border-t border-slate-100 dark:border-slate-700">
-            <button class="w-full bg-primary text-white font-bold py-4 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.99] transition-all text-base" id="save-btn">
+            <button class="w-full bg-primary text-white font-bold py-4 rounded-xl shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.99] transition-all text-base"
+                    id="save-btn">
                 Save Changes
             </button>
-            <button class="w-full text-red-500 font-bold py-3 mt-2 hover:text-red-600 transition-all text-sm" id="delete-btn">
+            <button class="w-full text-red-500 font-bold py-3 mt-2 hover:text-red-600 transition-all text-sm"
+                    id="delete-btn">
                 Delete Group
             </button>
         </div>
@@ -87,16 +95,18 @@
 
                     <input
                             class="w-full pl-12 pr-4 py-2.5 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-sm font-medium text-slate-900 dark:text-white placeholder-slate-400"
+                            id="device-search"
                             placeholder="Search devices..."
                             type="text"
-                            id="device-search"
                     />
                 </div>
                 <div class="flex gap-2 text-xs font-bold">
-                    <button class="px-4 py-2.5 text-slate-500 dark:text-slate-400 hover:text-slate-700 dark:hover:text-slate-200 transition-colors" onclick="deselectAllDevices()">
+                    <button class="px-4 py-2.5 text-slate-500 dark:text-slate-400 hover:text-slate-700 dark:hover:text-slate-200 transition-colors"
+                            onclick="deselectAllDevices()">
                         DESELECT ALL
                     </button>
-                    <button class="px-4 py-2.5 text-primary hover:text-primary/80 transition-colors" onclick="selectAllDevices()">
+                    <button class="px-4 py-2.5 text-primary hover:text-primary/80 transition-colors"
+                            onclick="selectAllDevices()">
                         SELECT ALL
                     </button>
                 </div>
@@ -116,12 +126,12 @@
 <script>
     // Available devices for selection (MOCK DATA - Ganti dengan real data nantinya)
     const availableDevices = [
-        { id: '1', name: "Daniel's MacBook", os: 'macOS 14.5', deviceId: 'MB-8829', selected: true },
-        { id: '2', name: "Main-Workstation", os: 'Windows 11', deviceId: 'PC-0012', selected: true },
-        { id: '3', name: "Lead Android", os: 'Android 14', deviceId: 'PH-9931', selected: false },
-        { id: '4', name: "Staging Server", os: 'Ubuntu 22.04', deviceId: 'SRV-X2', selected: true },
-        { id: '5', name: "Marketing PC", os: 'Windows 10', deviceId: 'PC-0482', selected: false },
-        { id: '6', name: "Design iPad", os: 'iPadOS 17', deviceId: 'TB-1102', selected: true },
+        {id: '1', name: "Daniel's MacBook", os: 'macOS 14.5', deviceId: 'MB-8829', selected: true},
+        {id: '2', name: "Main-Workstation", os: 'Windows 11', deviceId: 'PC-0012', selected: true},
+        {id: '3', name: "Lead Android", os: 'Android 14', deviceId: 'PH-9931', selected: false},
+        {id: '4', name: "Staging Server", os: 'Ubuntu 22.04', deviceId: 'SRV-X2', selected: true},
+        {id: '5', name: "Marketing PC", os: 'Windows 10', deviceId: 'PC-0482', selected: false},
+        {id: '6', name: "Design iPad", os: 'iPadOS 17', deviceId: 'TB-1102', selected: true},
     ];
 
     // Create selectable device card
@@ -195,7 +205,7 @@
     }
 
     // Initialize
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
         renderDeviceGrid();
         document.getElementById('mobile-menu-btn')?.addEventListener('click', openMobileMenu);
     });
