--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>GopherDrop - Settings</title>
+    <link href="./assets/img/logo.png" rel="icon" type="image/x-icon">
 
     <!-- TailwindCSS CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
